partically done adapter java cannot load the lib maybe i need to use a release build